# foppish-cloak

./: .env.example  .env.test  .eslintrc.json  .gitignore  .prettierignore  AWS-DEPLOYMENT-CHECKLIST.md  AWS-DEPLOYMENT-STATUS.md  AWS-PHASE1-BUG-FIXES.md  BEDROCK-TEST-RESULTS.md  DEPLOYMENT-NEXT-STEPS.md  PR-027-SUMMARY.md  README.md  TEST-SETUP.md  docker-compose.yml  jest.integration.config.js  migration-lambda.py  package.json  run-migrations-simple.js  run-migrations.py  run-tests-simple.sh  run-tests.sh  terraform-outputs.json  test-bedrock.py  tsconfig.base.json  tsconfig.json
.claude/: settings.json
services/ai-processor/: .dockerignore  .env.example  Dockerfile  deploy.sh  pyproject.toml  requirements.txt
services/ai-processor/event-samples/: analyze.json  generate.json  health.json
services/ai-processor/src/: __init__.py  config.py  document_analyzer.py  lambda_handler.py  letter_generator.py  logging.py  metrics.py
services/ai-processor/src/bedrock/: __init__.py  client.py  config.py  exceptions.py  tools.py
services/ai-processor/src/db/: __init__.py  connection.py
services/ai-processor/src/extractors/: __init__.py  damages.py  facts.py  parties.py
services/ai-processor/src/models/: __init__.py  base.py  document.py  letter.py
services/ai-processor/src/prompts/: extraction_prompts.py  generation_prompts.py
services/ai-processor/src/refinement/: __init__.py  feedback_handler.py
services/ai-processor/src/schemas/: extraction.py  letter.py
services/ai-processor/src/utils/: __init__.py  bedrock_logging.py  retry.py
services/ai-processor/tests/: conftest.py  test_document_analyzer.py  test_lambda_handler.py  test_letter_generator.py  test_refinement.py
services/ai-processor/tests/bedrock/: __init__.py  test_client.py  test_integration.py  test_retry.py  test_tools.py
services/ai-processor/tests/fixtures/: bedrock_responses.json  sample_police_report.txt
(+386 files in other folders)
